# 26_fly

./: .gitignore  G题植保飞行器_开发笔记.md  搬运飞行器_下一轮方案_视觉占比与第二趟测高.md  搬运飞行器_开发笔记.md  立体货架盘点无人机_开发笔记.md
fly_log/fly_20260529_191208/fly_log_20260529_191208/: manifest.txt
fly_log/fly_20260529_191208/fly_log_20260529_191208/bag_20260529_191208/: bag_20260529_191208_0.db3  metadata.yaml
log_fly/5-22-13-51/: bag_20260522_133115_0.db3  日志数据总结_20260522_133115.md
log_fly/5-22-13-51/recovered/: circle_area_ratio.csv  detected_pillars.csv  fine_data.csv  height.csv  laser_array_ground_height.csv  metadata.yaml  recovered_bag_0.db3  target_position.csv  target_velocity.csv
log_fly/5-22-22-10/: height_data_20260522_220324.csv  height_data_20260522_220445.csv  height_data_analysis_20260522_220324_220445.md
log_fly/5-22-22-54/: 5-22-22-54_飞行日志数据分析.md  bag_20260522_224530_0.db3  metadata.yaml
log_fly/5-23-02-54/: bag_20260523_024948_0.db3  metadata(1).yaml  日志总结.md
log_fly/5-23-05-01/: bag_20260523_045133_0.db3  metadata(2).yaml
log_fly/5-23-05-46/: metadata(3).yaml
log_fly/5-23-16-16/: bag_20260523_160237_0.db3
log_fly/5-23-18-52/: bag_20260523_184431_0.db3  metadata(4).yaml
log_fly/5-23-22-19/: bag_20260523_221500_0.db3  metadata(5).yaml
log_fly/5-24-15-38/: metadata(6).yaml
scripts/: autostart_fly.sh  collect_height_data.py  run_test.sh  stop_fly.sh  tofsense_m_test.py
src/: README.md
src/activity_control_pkg/: CMakeLists.txt
src/activity_control_pkg/include/activity_control_pkg/: pillar_pickup_mission_node.hpp  pillar_scan_mission_node.hpp
src/activity_control_pkg/launch/: pillar_pickup_mission.launch.py  pillar_scan_mission.launch.py
src/activity_control_pkg/src/: pillar_pickup_mission_node.cpp  pillar_scan_mission_node.cpp  route_target_publisher.cpp
src/barcode_camera_pkg/barcode_camera_pkg/: barcode_camera_node.py
src/barcode_camera_pkg/launch/: barcode_camera.launch.py
src/data_comm_analysis/: CMakeLists.txt  package.xml
src/data_comm_analysis/include/data_comm_analysis/: data_comm_analysis.hpp
src/data_comm_analysis/launch/: data_comm_analysis.launch.py
src/data_comm_analysis/src/: data_comm_analysis.cpp  data_comm_analysis_node.cpp
src/dbh_visual_pkg/: package.xml  setup.cfg  setup.py
src/dbh_visual_pkg/dbh_visual_pkg/: opencv_init_v43.py
src/dbh_visual_pkg/launch/: dbh_visual.launch.py
src/dbh_visual_pkg/resource/: dbh_visual_pkg
src/drone_camera_pkg/src/: drone_camera_node.cpp
src/inventory_control_pkg/: CMakeLists.txt  package.xml
src/inventory_control_pkg/include/inventory_control_pkg/: inventory_mission_node.hpp
src/inventory_control_pkg/launch/: inventory_mission.launch.py
src/inventory_control_pkg/src/: inventory_mission_main.cpp  inventory_mission_node.cpp
src/laser_array_pkg/src/: laser_array_ground_node.cpp
src/magnet_control_pkg/: package.xml  setup.cfg  setup.py
src/magnet_control_pkg/launch/: magnet_control.launch.py
src/magnet_control_pkg/magnet_control_pkg/: gpio_backend.py  magnet_node.py
src/my_launch/: package.xml
src/my_launch/launch/: barcode_test.launch.py  demo1.launch.py  demo2.launch.py  demo3.launch.py  demo_basic.launch.py  led_digit_test.launch.py  spray_basic.launch.py
src/pid_control_pkg/launch/: position_pid_controller_ground.launch.py
src/pid_control_pkg/src/: pid_controller.cpp
src/pillar_detector_pkg/: CMakeLists.txt  package.xml
src/pillar_detector_pkg/include/pillar_detector_pkg/: pillar_detector_node.hpp  pillar_detector_node_tf.hpp  pillar_detector_single_node.hpp
src/pillar_detector_pkg/launch/: pillar_detector_single.launch.py  pillar_detector_tf.launch.py
src/pillar_detector_pkg/src/: pillar_detector_node.cpp  pillar_detector_node_tf.cpp  pillar_detector_single_main.cpp  pillar_detector_single_node.cpp  pillar_detector_tf_main.cpp
src/qr_vision_pkg/: README.md  package.xml  setup.cfg  setup.py
src/qr_vision_pkg/qr_vision_pkg/: decoder_common.py  qr_fine_tune.py
src/spray_control_pkg/: CMakeLists.txt  README.md  package.xml
src/spray_control_pkg/include/spray_control_pkg/: spray_mission_node.hpp
src/spray_control_pkg/launch/: spray_mission.launch.py
src/spray_control_pkg/src/: spray_mission_main.cpp  spray_mission_node.cpp
src/uart_to_stm32/include/uart_to_stm32/: uart_to_stm32.hpp
src/uart_to_stm32/src/: uart_to_stm32.cpp
src/visual_pkg/: package.xml  setup.cfg  setup.py
src/visual_pkg/launch/: visual_pkg.launch.py
src/visual_pkg/resource/: visual_pkg
src/visual_pkg/visual_pkg/: detector_core.py  visual_node.py
