<?xml version="1.0"?>
<package format="3">
  <name>data_comm_analysis</name>
  <version>0.1.0</version>
  <description>UART data communication and analysis package for barometric altitude frame parsing.</description>

  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Boost</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>serial_comm</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
