<?xml version="1.0"?>
<package format="3">
  <name>inventory_control_pkg</name>
  <version>0.1.0</version>
  <description>D题 立体货架盘点：单相机 + yaw 旋转遍历盘点 / 定向盘点任务状态机。</description>

  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
