<?xml version="1.0"?>
<package format="3">
  <name>spray_control_pkg</name>
  <version>0.1.0</version>
  <description>植保飞行器（2021 电赛 G 题）撒药任务状态机：全覆盖飞行 + 激光笔撒药 + 精准降落。</description>

  <maintainer email="maintainer@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
